# kegg

./: .gitignore  AbstractGraphBuilder.sh  DataPreProcess.sh  README.md  StartPredict.sh  StartTrain.sh  environment.yml  pyproject.toml  requirements-core.txt  requirements.txt
data/: all_reaction.xlsx
kegg_env_demo/: pyvenv.cfg
src/data_processing/: kegg_processor.py
src/graph_construction/: calculate_edge_weights.py  generate_abstract_connections.py  graph_utils.py  main.py  visualization.py  weighted_graph_builder.py
src/kegnn_model/: config.py  data_adapter.py  ko_node_predictor.py  models.py  node_predictor.py  predict_kegg.py  process_kegg_data.py  sample_config.json  train_kegg_simple.py  trainer.py
src/kegnn_model/kegg_real_processed/: processed_edges.csv  processed_nodes.csv  processed_weights.json  processing_report.json
src/kegnn_model/kegg_training_results/: training_results.json
utils/: test_real_connection.py
